Fix Create TIcket Tab spacing

--- a/src/screens/Project/TaskManagement/styles/BoardColumnStyles.scss
+++ b/src/screens/Project/TaskManagement/styles/BoardColumnStyles.scss
@@ -26,6 +26,7 @@
       font-size: 16px;
       font-weight: 700;
       height: 30px;
+      margin-bottom: 8px;
       padding: 8px;
 
       span {
